--- a/home.html
+++ b/home.html
@@ -2,64 +2,55 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Bài tập 21 – Thực hành VHU</title>
+    <title>Bài tập 21 – VHU</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background: #f2f2f2;
         }
 
         .container {
-            width: 400px;
+            width: 420px;
             margin: 80px auto;
-            background: white;
-            padding: 30px;
-            border-radius: 6px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background: #fff;
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.15);
         }
 
-        h1 {
+        h2 {
             text-align: center;
             margin-bottom: 20px;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li {
-            margin: 10px 0;
         }
 
         a {
             display: block;
             padding: 12px;
-            background-color: #4CAF50;
+            margin: 10px 0;
+            background: #4CAF50;
             color: white;
             text-decoration: none;
             text-align: center;
-            border-radius: 4px;
+            border-radius: 5px;
+            font-size: 16px;
         }
 
         a:hover {
-            background-color: #45a049;
+            background: #45a049;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <h1>Bài tập 21 – VHU</h1>
+<div class="container">
+    <h2>BÀI TẬP 21 – THỰC HÀNH WEB</h2>
 
-        <ul>
-            <li><a href="TK4/index.html">TK4 – Tab View</a></li>
-            <li><a href="TK5/index.html">TK5 – Accordion</a></li>
-            <li><a href="K3/index.html">K3 – Kiểm tra mật khẩu</a></li>
-            <li><a href="K7/index.html">K7 – Parallax Scrolling</a></li>
-            <li><a href="K8/index.html">K8 – Tính chỉ số BMI</a></li>
-        </ul>
-    </div>
+    <a href="TK4.html">TK4 – Tab View</a>
+    <a href="TK5.html">TK5 – Accordion</a>
+    <a href="K3.html">K3 – Kiểm tra mật khẩu</a>
+    <a href="K7.html">K7 – Parallax Scrolling</a>
+    <a href="K8.html">K8 – Tính chỉ số BMI</a>
+</div>
 
 </body>
 </html>
